add:目次・見出し・メニュー

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,11 +1,9 @@
-# Introduction
+# Overview
  
-Welcome to Nextra! This is a basic docs template. You can use it as a starting point for your own project :)
+これまでの開発・制作物および関連の技術的活動をまとめています。
 
-## What is Nextra?
+(※2020年以前の内容については旧ポートフォリオhttps://mitixx.github.io/my-website/ に掲載されています)
 
-A **simple**, **powerful** and **flexible** site generation framework with everything you love from Next.js.
+## Profile
+自己紹介
 
-## Documentation
-
-The documentation is available at [https://nextra.site](https://nextra.site).
