--- a/pages/0.tech-skill.mdx
+++ b/pages/0.tech-skill.mdx
@@ -2,5 +2,30 @@
 
 技術面での所有スキルや取り組みについて
 
+## frontend skill
+☆もしくはレーダー(chartjs)などグラフで視覚表示
+
+## backend skill
+- php
+- cakephp
+- wordpress
+- mysql
+
+## cloud
+### aws
+- VPC
+- EC2
+- S3
+- CloudWatch
+- APIGateway
+- Lambda
+- personalize
+
+## infrastructure
+- nginx 
+- redis
+
+## architecture
+
 ## tech activity
-技術活動に関する履歴
+技術活動（イベント含む）に関する履歴
