--- a/pages/0.tech-skill.mdx
+++ b/pages/0.tech-skill.mdx
@@ -3,15 +3,14 @@
 技術面での所有スキルや取り組みについて
 
 ## frontend skill
-☆もしくはレーダー(chartjs)などグラフで視覚表示
-
-<iframe src="/test/"></iframe>
+<iframe src="/chart/front/" width="100%" height="400px" scrolling="no"></iframe>
 
 ## backend skill
 - php
 - cakephp
 - wordpress
 - mysql
+<iframe src="/chart/back/" width="100%" height="400px" scrolling="no"></iframe>
 
 ## cloud
 ### aws
@@ -22,10 +21,12 @@
 - APIGateway
 - Lambda
 - personalize
+<iframe src="/chart/cloud/" width="100%" height="400px" scrolling="no"></iframe>
 
 ## infrastructure
 - nginx 
 - redis
+<iframe src="/chart/infra/" width="100%" height="400px" scrolling="no"></iframe>
 
 ## architecture
 
