--- a/pages/0.dream-target.mdx
+++ b/pages/0.dream-target.mdx
@@ -1,2 +1,18 @@
 # dream:target
 今後できるようになりたいことや目指していることについて
+
+## big traffic 
+トラフィックが多い大きなサービスを手がけたい。
+
+これまで最大数千トラフィック程度のプロダクトまでしか手がけたことがないため、さらに大きなサービスに携わることでしか得られない技術を習得したい。
+ユーザー体験の向上を実現したい。
+
+## wide knowledge  
+
+これまでに経験のない業種や種類のプロダクトに携わることで、現在の手持ちのスキルや業務知識の範疇から抜け出して幅広い知見を持ち続けていたい。
+
+## influence
+
+プロダクトや技術的な内容に関してのみではなく、組織としてもユーザーに対しても自分自身影響を受け、また影響を与えられるようになりたい。
+
+多様なバックボーン（例：業界など）の出身者がいる環境というこれまでにない経験を増やしたい。
