add:プロフィール+使用技術+ポリシー

--- a/pages/0.work-skill.mdx
+++ b/pages/0.work-skill.mdx
@@ -1,6 +1,8 @@
 # work skill
 
-仕事面での取り組んできた心がけやこだわりについて
-
 ### work sub skill
 付随業務などメイン業務以外の取り組んでいたこと。少しだけ知っていること。
+
+- KPIに関する理解・分析
+- analyticsを使用した測定・分析
+- k6を使用したサーバー障害の検知
