--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,3 +1,6 @@
+import Image from "next/image";
+import pic from "./img/profile.jpg";
+
 # Overview
  
 これまでの開発・制作物および関連の技術的活動をまとめています。
@@ -5,5 +8,22 @@
 (※2020年以前の内容については旧ポートフォリオhttps://mitixx.github.io/my-website/ に掲載されています)
 
 ## Profile
-自己紹介
+
+<Image src={pic} alt="プロフィール画像" width={300} height={300}/>
+
+### 未知(だるぷ)
+
+愛知県出身
+
+「作ること」がこよなく大好きで、プログラムのみならず趣味でイラストを描くことや自作PC、ちょっぴり同人活動・イベント開催をしたことも。
+最近はキーボード自作に興味が高く30％キーボードを近々作ろうとしている。
+
+好きな食べ物はラーメン。
+近々都内に引っ越したら都内のラーメンを食べつくしたい。
+各地のラーメンを食べ歩くことや、クロスバイクで琵琶湖を走る・パラグライダーで空を飛ぶなどアクティブな面も併せ持つ。
+
+JavaScriptをはじめとしたフロントエンド開発と、phpを使用したバックエンド開発からMYSQLを使用したクエリの実装・パフォーマンス改善、またawsを活用したクラウド関連業務を手がけてきました。
+
+
+
 
