--- a/pages/0.dream-target.mdx
+++ b/pages/0.dream-target.mdx
@@ -1,6 +1,11 @@
 # dream:target
 今後できるようになりたいことや目指していることについて
 
+## make happy
+開発＝発展させることだと考えているので、サービス・プロダクト・チームおよび自分自身のエンジニアスキル、会社・社会に貢献できる仕事に繋がることを行いたいです。
+
+そのためには前向きに手がけたことがないサービスや技術に関しても挑戦していき、積極的に提案や試行錯誤・工夫を凝らして最善手を尽くせる環境で常に取り組んでいたいと思います。
+
 ## big traffic 
 トラフィックが多い大きなサービスを手がけたい。
 
@@ -10,6 +15,8 @@
 ## wide knowledge  
 
 これまでに経験のない業種や種類のプロダクトに携わることで、現在の手持ちのスキルや業務知識の範疇から抜け出して幅広い知見を持ち続けていたい。
+
+常に知識をアップデートさせ続けていたい。
 
 ## influence
 
