--- a/pages/0.tech-skill.mdx
+++ b/pages/0.tech-skill.mdx
@@ -3,14 +3,17 @@
 技術面での所有スキルや取り組みについて
 
 ## frontend skill
-<iframe src="/chart/front/" width="100%" height="400px" scrolling="no"></iframe>
+- JavaScirpt
+- jQuery
+- Vue.js
+- Next.js(現在のこのサイト)
+- Astro(このサイトにリンクがあるブログ)
 
 ## backend skill
 - php
 - cakephp
 - wordpress
-- mysql
-<iframe src="/chart/back/" width="100%" height="400px" scrolling="no"></iframe>
+- MYSQL
 
 ## cloud
 ### aws
@@ -21,14 +24,18 @@
 - APIGateway
 - Lambda
 - personalize
-<iframe src="/chart/cloud/" width="100%" height="400px" scrolling="no"></iframe>
 
 ## infrastructure
 - nginx 
 - redis
-<iframe src="/chart/infra/" width="100%" height="400px" scrolling="no"></iframe>
 
 ## architecture
+- API設計
+- テーブル設計
 
 ## tech activity
-技術活動（イベント含む）に関する履歴
+技術活動に関する履歴
+
+技術書活動
+
+booth:https://yumeiroya.booth.pm/
