add:X link,技術スキルの更新

--- a/pages/0.dream-target.mdx
+++ b/pages/0.dream-target.mdx
@@ -6,6 +6,8 @@
 
 そのためには前向きに手がけたことがないサービスや技術に関しても挑戦していき、積極的に提案や試行錯誤・工夫を凝らして最善手を尽くせる環境で常に取り組んでいたいと思います。
 
+これには製品のパフォーマンス改善や品質改善、セキュリティの強化などあらゆる観点で取り組めることを希望しています。
+
 ## big traffic 
 トラフィックが多い大きなサービスを手がけたい。
 
@@ -21,5 +23,3 @@
 ## influence
 
 プロダクトや技術的な内容に関してのみではなく、組織としてもユーザーに対しても自分自身影響を受け、また影響を与えられるようになりたい。
-
-多様なバックボーン（例：業界など）の出身者がいる環境というこれまでにない経験を増やしたい。
