--- a/pages/0.tech-skill.mdx
+++ b/pages/0.tech-skill.mdx
@@ -8,12 +8,24 @@
 - Vue.js
 - Next.js(現在のこのサイト)
 - Astro(このサイトにリンクがあるブログ)
+- React(個人開発ゲーム)
 
 ## backend skill
-- php
+- php(5.6~8.2)
 - cakephp
 - wordpress
 - MYSQL
+- Node.js
+- TypeScript(個人開発ゲーム)
+- go(個人開発ゲームに使う目的で学習中)
+
+## Automation skill
+- ExcelVBA
+- GoogleAppScript(GAS)
+- shell script
+- Python(jupyter notebookなど) 
+- マクロ(Excel以外に画面自動化)
+- AI(ChatGPTやCursorなどの生成AIの活用)
 
 ## cloud
 ### aws
@@ -24,14 +36,32 @@
 - APIGateway
 - Lambda
 - personalize
+- SQS
+- ロードバランシング
+- WAF
 
 ## infrastructure
 - nginx 
 - redis
+- docker
 
 ## architecture
+- 要件定義
+- 基本設計
+- 詳細設計
+- テスト設計
+- ドメイン駆動開発(DDD)
 - API設計
 - テーブル設計
+
+## method
+開発手法
+- ウォーターフォール
+- アジャイル
+- git
+
+## Other
+- GitHub Actions(CI/CD　個人開発ゲームにて利用中)
 
 ## tech activity
 技術活動に関する履歴
