--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -11,18 +11,23 @@ import pic from "./img/profile.jpg";
 
 <Image src={pic} alt="プロフィール画像" width={300} height={300}/>
 
-### 未知(だるぷ)
+### darupu
 
-愛知県出身
+愛知県出身、現在千葉在住です。
 
 「作ること」がこよなく大好きで、プログラムのみならず趣味でイラストを描くことや自作PC、ちょっぴり同人活動・イベント開催をしたことも。
+
+現在は個人開発でクイズゲームを鋭意制作・開発中。（ https://x.com/mesugaki_game ）
+
 最近はキーボード自作に興味が高く30％キーボードを近々作ろうとしている。
 
 好きな食べ物はラーメン。
-近々都内に引っ越したら都内のラーメンを食べつくしたい。
 各地のラーメンを食べ歩くことや、クロスバイクで琵琶湖を走る・パラグライダーで空を飛ぶなどアクティブな面も併せ持つ。
+現在ヨガインストラクターのライセンス取得に向けてヨガスクールへ通学しています。
 
-JavaScriptをはじめとしたフロントエンド開発と、phpを使用したバックエンド開発からMYSQLを使用したクエリの実装・パフォーマンス改善、またawsを活用したクラウド関連業務を手がけてきました。
+JavaScriptをはじめとしたフロントエンド開発と、phpを使用したバックエンド開発からPythonを利用した業務効率化・作業効率化をはじめとする自動化やMYSQLを使用したクエリの実装・パフォーマンス改善、またawsを活用したクラウド関連業務を手がけてきました。
+
+エンジニアとして重視・意識しているポイントについては、「my policy」をご覧ください。
 
 
 
