--- a/pages/0.my-policy.mdx
+++ b/pages/0.my-policy.mdx
@@ -1,5 +1,5 @@
 # my policy
-仕事上での大事にしていることや心がけおよびポリシー
+エンジニアとして大事にしていることや心がけおよびポリシーについて
 
 ## never give up!
 「できない」「しょうがない」「諦め」るより、少しでも良くしようと取り組んでいたい。
@@ -7,18 +7,32 @@
 すぐに簡単に良くならないことでも、長期的な目線でどうしたら近づいていけるのかを考える。
 理想と現状と何が足らないかを考えること。
 
-## dream come true
-「叶えたい」と思うからこそ、行動する。
+## Quolity
+製品のパフォーマンス改善や品質改善、セキュリティの強化などあらゆる観点で品質を重視しています。
 
-これはプライベート上でもやりたいと思ったことは後悔しないようにやる。
+開発速度も大事ですが、根本的な設計やアーキテクチャ、長期運用しても問題が生じないことや障害の発生を未然に防ぐことは大事なことだと思っています。
 
-## shortest
-最短を極める。
-自動化を駆使し、スピードを上げる。
+## Automation
+あらゆる方法で自動化や効率化を模索しています。
+
+これはクオリティにも関連することで、あくまで品質向上を主軸に置きながら実践できることを意識しています。
 
 相乗効果で人為的なヒューマンミスをなくし、安全・快適に取り組める環境となるよう、いつでも考え続ける。
 
 危険な作業や重労働を減らしてほかのメンバーや会社にとって「幸せ」になるために。
+
+## Creative
+
+創意工夫。
+
+これもクオリティに関連する部分で、アーキテクチャやセキュリティに関してなど積極的に常に最新情報をキャッチアップすることを心がけており、勉強会への参加や日ごろからTwitter等で情報収集する習慣があります。
+
+キャッチアップした情報をもとに、利用ケースや適用事例を知っておくことで、製品に対しての創意工夫として活かせるようにしています。
+
+## dream come true
+「叶えたい」と思うからこそ、行動する。
+
+これはプライベート上でもやりたいと思ったことは後悔しないようにやる。
 
 
 
